--- a/package.json
+++ b/package.json
@@ -1,66 +1,67 @@
 {
-  "name": "@pawangujral/webpack-ui-template",
+  "name": "@pawan/HackerNews",
   "author": "Pawan Gujral",
   "email": "gujral87@gmail.com",
   "repository": {
     "type": "git",
-    "url": "https://github.com/pawangujral/template.git",
-    "bugs": "https://github.com/pawangujral/template.git/issues"
+    "url": "https://github.com/pawangujral/HackerNews.git",
+    "bugs": "https://github.com/pawangujral/HackerNews.git/issues"
   },
-  "description": "Webpack template for quick browser extension projects with react",
-  "version": "1.0.0",
   "dependencies": {
+    "express": "^4.17.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0",
+    "react-icons": "^4.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3"
   },
+  "description": "Listing of Hacker News",
   "devDependencies": {
-    "@ridedott/eslint-config": "^2.15.41",
+    "@ridedott/eslint-config": "^2.14.5",
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.1.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.2",
-    "@types/jest-axe": "^3.5.3",
-    "@types/node": "^16.10.1",
-    "@types/react": "^17.0.24",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-router-dom": "^5.1.9",
-    "@types/styled-components": "^5.1.14",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.1.9",
+    "@types/jest": "^26.0.23",
+    "@types/jest-axe": "^3.5.1",
+    "@types/node": "^16.0.0",
+    "@types/react": "^17.0.13",
+    "@types/react-dom": "^17.0.7",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.11",
     "@types/webpack-env": "^1.16.2",
-    "autoprefixer": "^10.3.6",
-    "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^6.3.0",
-    "cssnano": "^5.0.8",
-    "eslint": "^7.32.0",
-    "eslint-plugin-react": "^7.25.3",
+    "autoprefixer": "^10.2.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.2.6",
+    "cssnano": "^5.0.6",
+    "eslint": "^7.30.0",
+    "eslint-plugin-react": "^7.24.0",
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
-    "husky": "^7.0.2",
-    "jest": "^27.2.0",
-    "lint-staged": "^11.1.2",
+    "husky": "^7.0.0",
+    "jest": "^27.0.6",
+    "lint-staged": "^11.0.0",
+    "moment": "^2.29.1",
     "npm-run-all": "^4.1.5",
     "postcss-loader": "^6.1.1",
-    "prettier": "^2.4.1",
-    "style-loader": "^3.3.0",
-    "styled-components": "^5.3.1",
+    "prettier": "^2.3.2",
+    "style-loader": "^3.0.0",
+    "styled-components": "^5.3.0",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-order": "^4.1.0",
-    "ts-jest": "^27.0.5",
-    "ts-loader": "^9.2.6",
+    "ts-jest": "^25.2.1",
+    "ts-loader": "^9.2.3",
     "tsconfig-paths-webpack-plugin": "^3.5.1",
-    "typescript": "^4.4.3",
-    "webpack": "^5.53.0",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.2.1",
-    "webpack-merge": "^5.8.0",
-     "postcss": "^8.3.8"
+    "typescript": "^4.3.5",
+    "webpack": "^5.42.1",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.8.0"
   },
   "engines": {
-    "node": "12",
+    "node": ">=12",
     "npm": ">=6.13.4"
   },
   "files": [
@@ -76,28 +77,31 @@
     "*.css": [
       "stylelint --fix"
     ],
-    "*.ts": [
+    "*.{ts}": [
       "eslint --fix --resolve-plugins-relative-to \"./node_modules/@ridedott/eslint-config\""
     ],
-    "*.{css,js,json,md,ts,yaml,yml}": [
+    "*.{css,js,json,md,ts,tsx,jsx,yaml,yml}": [
       "prettier --write"
     ]
   },
   "scripts": {
-    "format": "prettier --check \"**/*.{css,js,json,md,ts,yml,yaml}\"",
-    "format:fix": "prettier --write \"**/*.{css,js,json,md,ts,yml,yaml}\"",
+    "format": "prettier --check \"**/*.{css,js,json,md,ts,tsx,yml,yaml}\"",
+    "format:fix": "prettier --write \"**/*.{css,js,json,md,ts,tsx,yml,yaml}\"",
     "husky:lint-staged": "lint-staged",
     "husky:pre-commit": "run-p husky:lint-staged",
-    "lint": "run-p lint:css lint:ts",
-    "lint:css": "stylelint 'src/**/*.css'",
-    "lint:css:fix": "stylelint --fix 'src/**/*.css'",
+    "lint": "run-p lint:ts",
     "lint:fix": "run-p lint:*:fix",
     "lint:ts": "eslint --resolve-plugins-relative-to \"./node_modules/@ridedott/eslint-config\" \"**/*.ts\"",
     "lint:ts:fix": "eslint --fix --resolve-plugins-relative-to \"./node_modules/@ridedott/eslint-config\" \"**/*.ts\"",
     "start": "node server.js",
     "dev": "webpack serve --config @config/webpack.development.js --progress",
     "build": "webpack --mode production --config @config/webpack.production.js",
-    "test": "jest",
+    "test": "jest --config jest.config.js",
+    "test:watch": "jest --config jest.config.js --watch",
     "types": "tsc --noEmit"
+  },
+  "version": "1.0.0",
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
