--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "moment": "^2.29.1"
   },
   "description": "Listing of Hacker News",
   "devDependencies": {
-    "@ridedott/eslint-config": "^2.14.5",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
+    "eslint-config-airbnb-typescript": "^14.0.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.1.9",
-    "@types/jest": "^26.0.23",
-    "@types/jest-axe": "^3.5.1",
     "@types/node": "^16.0.0",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.7",
@@ -33,15 +34,17 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.2.6",
     "cssnano": "^5.0.6",
-    "eslint": "^7.30.0",
-    "eslint-plugin-react": "^7.24.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.26.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.0",
-    "jest": "^27.2.2",
     "lint-staged": "^11.0.0",
-    "moment": "^2.29.1",
     "npm-run-all": "^4.1.5",
     "postcss-loader": "^6.1.1",
     "prettier": "^2.3.2",
@@ -77,7 +80,7 @@
       "stylelint --fix"
     ],
     "*.{ts}": [
-      "eslint --fix --resolve-plugins-relative-to \"./node_modules/@ridedott/eslint-config\""
+      "eslint --fix --resolve-plugins-relative-to"
     ],
     "*.{css,js,json,md,ts,tsx,jsx,yaml,yml}": [
       "prettier --write"
@@ -90,8 +93,8 @@
     "husky:pre-commit": "run-p husky:lint-staged",
     "lint": "run-p lint:ts",
     "lint:fix": "run-p lint:*:fix",
-    "lint:ts": "eslint --resolve-plugins-relative-to \"./node_modules/@ridedott/eslint-config\" \"**/*.ts\"",
-    "lint:ts:fix": "eslint --fix --resolve-plugins-relative-to \"./node_modules/@ridedott/eslint-config\" \"**/*.ts\"",
+    "lint:ts": "eslint --resolve-plugins-relative-to \"**/*.ts\"",
+    "lint:ts:fix": "eslint --fix --resolve-plugins-relative-to  \"**/*.ts\"",
     "start": "node server.js",
     "dev": "webpack serve --config @config/webpack.development.js --progress",
     "build": "webpack --mode production --config @config/webpack.production.js",
