--- a/package.json
+++ b/package.json
@@ -9,18 +9,15 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
-    "moment": "^2.29.1"
+    "react-scripts": "^4.0.3"
   },
   "description": "Listing of Hacker News",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.29.3",
-    "@typescript-eslint/parser": "^4.29.3",
-    "eslint-config-airbnb-typescript": "^14.0.0",
+    "react-icons": "^4.2.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.1.9",
@@ -30,12 +27,15 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.11",
     "@types/webpack-env": "^1.16.2",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
     "autoprefixer": "^10.2.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.2.6",
     "cssnano": "^5.0.6",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^14.0.0",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.0",
